# Burning-ship-fractal

./: README.md
Burning_ship/: CMakeLists.txt  main.cpp
Burning_ship/Drawing/: CMakeLists.txt  drawing.cpp  drawing.h
